--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,49 @@
 * {
-	margin: auto;
-	padding: auto;
+	margin: 0px;
+	padding: 0px;
+}
+
+/* Header */
+.header-wrap {
+	width: 100%;
+	height: 70px;
+	padding-top: 15px;
+	color: purple;
+	display: flex;
+	align-items: center;
+	background-color: white;
+	border-bottom: 1px solid black;
+}
+
+img {
+	margin-left: 150%;
+}
+
+span {
+	color: purple;
+}
+
+/* Nav Bar */
+.nav {
+	background-color: rgb(212, 245, 242);
+	display: flex;
+	justify-content: space-between;
+	list-style-type: none;
+	color: black;
+	height: 15px;
+	padding: 20px;
+	border-bottom: 1px solid black;
+}
+
+.nav-names {
+	text-decoration: none;
+}
+
+a {
+	color: black;
 }
 
 .app {
 	background-color: yellow;
+	height: 150px;
 }
