--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,30 @@
-* {
-	margin: 0px;
+/* body {
+	margin: 0 auto;
+	height: 100%;
 	padding: 0px;
 }
 
-/* Header */
-.header-wrap {
+header {
 	width: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.logo {
+	white-space: nowrap;
+}
+.header-wrap {
+	background-color: purple;
+}
+
+.nav {
+	display: flex;
+	flex-direction: column;
+	background-color: blue;
+	white-space: nowrap;
+} */
+/*
+.header-wrap {
 	height: 70px;
 	padding-top: 15px;
 	color: purple;
@@ -23,27 +42,53 @@ span {
 	color: purple;
 }
 
-/* Nav Bar */
+*/
+/* 
 .nav {
-	background-color: rgb(212, 245, 242);
+	background-color: blue;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
+	align-items: center;
 	list-style-type: none;
-	color: black;
 	height: 15px;
 	padding: 20px;
 	border-bottom: 1px solid black;
+	font-family: "Staatliches", cursive;
+	font-size: 20px;
 }
 
 .nav-names {
 	text-decoration: none;
+	color: white;
 }
 
 a {
 	color: black;
 }
 
+
+.hamburger {
+	width: 32px;
+	height: 25px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	cursor: pointer;
+}
+
+span {
+	width: 100%;
+	height: 3px;
+	background-color: black;
+}
+
+
+.home-one {
+	height: 600px;
+	background-color: purple;
+}
+
 .app {
 	background-color: yellow;
 	height: 150px;
-}
+} */
