--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,10 +1,25 @@
-/* body {
-	margin: 0 auto;
-	height: 100%;
-	padding: 0px;
+@import "~antd/dist/antd.css";
+
+.app {
+	height: 100vh;
+
+	.sections {
+		width: 100%;
+		height: calc(100vh - 200px);
+		background-color: palegreen;
+		position: relative;
+		top: 125px;
+		scroll-snap-type: y mandatory;
+
+		> * {
+			width: 100vw;
+			height: calc(100vh - 200px);
+			scroll-snap-align: start;
+		}
+	}
 }
 
-header {
+/*header {
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
