--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -1,8 +1,43 @@
 .header {
 	width: 100%;
-	height: 175px;
-	background-color: coral;
+	height: 150px;
+	background-image: linear-gradient(45deg, #d411ba 0%, #4398dd 52%, #fbff2b 90%);
 	position: fixed;
 	top: 0;
 	z-index: 2;
+
+	.logo {
+		font-family: "Mochiy Pop P One", sans-serif;
+		font-size: 90px;
+	}
+
+	a {
+		color: white;
+		text-decoration: none;
+	}
+
+	.wrap {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding-left: 15px;
+
+		.right {
+			.hamburger {
+				width: 40px;
+				height: 30px;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				margin-right: 30px;
+				cursor: pointer;
+
+				span {
+					width: 100%;
+					height: 3px;
+					background-color: #7796af;
+				}
+			}
+		}
+	}
 }
