--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -1,7 +1,7 @@
 .header {
 	width: 100%;
 	height: 150px;
-	background-image: linear-gradient(45deg, #d411ba 0%, #4398dd 52%, #fbff2b 90%);
+	background: linear-gradient(45deg, #d411ba 0%, #4398dd 52%, #fbff2b 90%);
 	position: fixed;
 	top: 0;
 	z-index: 2;
@@ -36,6 +36,25 @@
 					width: 100%;
 					height: 3px;
 					background-color: #7796af;
+					transition: all 3s ease;
+				}
+			}
+		}
+	}
+
+	&.active {
+		background: linear-gradient(45deg, #2bffe3 0%, #4398dd 52%, #2bffe3 90%);
+
+		.hamburger {
+			span {
+				&:first-child {
+					background-color: black;
+				}
+				&:nth-child(2) {
+					background-color: black;
+				}
+				&:last-child {
+					background-color: black;
 				}
 			}
 		}
