sign up page completed

--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -1,7 +1,10 @@
 .home {
 	background-color: white;
-	font-family: "Staatliches", cursive;
-	font-size: 75px;
-	text-align: center;
-	padding-top: 20px;
+
+	h1 {
+		font-family: "Staatliches", cursive;
+		font-size: 75px;
+		text-align: center;
+		padding-top: 20px;
+	}
 }
