edit of queries

--- a/client/src/pages/SearchGames/searchgames.scss
+++ b/client/src/pages/SearchGames/searchgames.scss
@@ -1,3 +1,10 @@
 .search-games {
-	background-color: green;
+	background-color: rgb(110, 204, 204);
+
+	h3 {
+		font-size: 40px;
+		font-family: "Staatliches", cursive;
+		text-align: center;
+		margin-top: 50px;
+	}
 }
