--- a/client/src/pages/Login/login.scss
+++ b/client/src/pages/Login/login.scss
@@ -32,4 +32,10 @@
 		color: white;
 		font-weight: bold;
 	}
+
+	.error {
+		font-family: "Murecho", sans-serif;
+		font-size: 15px;
+		text-align: center;
+	}
 }
