--- a/client/src/pages/Login/login.scss
+++ b/client/src/pages/Login/login.scss
@@ -1,6 +1,6 @@
 .login {
 	.login-header {
-		font-size: 40px;
+		font-size: 50px;
 		font-family: "Staatliches", cursive;
 		text-align: center;
 		margin-top: 50px;
@@ -13,12 +13,12 @@
 		text-align: center;
 	}
 
-	input {
+	.form-input {
 		display: flex;
 		width: 50%;
 		justify-content: space-evenly;
 		text-align: center;
-		margin: 0px 0px 10px 250px;
+		margin-bottom: 5px;
 		padding: 5px;
 	}
 
