--- a/client/src/pages/Signup/signup.scss
+++ b/client/src/pages/Signup/signup.scss
@@ -2,7 +2,7 @@
 	background-color: lavender;
 
 	.signup-header {
-		font-size: 40px;
+		font-size: 50px;
 		font-family: "Staatliches", cursive;
 		text-align: center;
 		margin-top: 50px;
@@ -20,7 +20,7 @@
 		width: 50%;
 		justify-content: space-evenly;
 		text-align: center;
-		margin: 0px 0px 10px 250px;
+		margin-bottom: 5px;
 		padding: 5px;
 	}
 
