fixed authMiddleware spelling error

--- a/client/src/components/AddGame/addgame.scss
+++ b/client/src/components/AddGame/addgame.scss
@@ -21,6 +21,7 @@ form {
 .btn {
 	border-radius: 5px;
 	margin-top: 10px;
+	margin-bottom: 20px;
 	margin-left: 5px;
 	padding: 5px;
 	width: 100px;
