--- a/client/src/pages/Login/login.scss
+++ b/client/src/pages/Login/login.scss
@@ -5,7 +5,8 @@
 		text-align: center;
 		margin-top: 50px;
 	}
-	form {
+
+	.form {
 		font-family: "Murecho", sans-serif;
 		font-size: 15px;
 		margin: 10px;
