--- a/client/src/pages/SavedGames/savedgames.scss
+++ b/client/src/pages/SavedGames/savedgames.scss
@@ -1,6 +1,11 @@
 .saved-games {
 	background-color: orange;
 
+	h2 {
+		font-family: "Murecho", sans-serif;
+		text-align: center;
+	}
+
 	h4 {
 		font-size: 50px;
 		font-family: "Staatliches", cursive;
